<resources>
    <string name="app_name">Financial Manager</string>

    <string name="welcome_screen_title">All your savings accounts easily managed</string>
    <string name="transaction_screen_current_balance_title">Current Balance</string>

    <string name="text_title">Title</string>
    <string name="text_note">Note</string>
    <string name="text_amount">Amount</string>
    <string name="text_when">When</string>
    <string name="text_transaction_type">Transaction type</string>
    <string name="text_select_image">Select image</string>
    <string name="text_save_transaction">Save transaction</string>

    <string name="text_all">All</string>
    <string name="text_income">Income</string>
    <string name="text_expense">Expense</string>

    <string name="successfully_saved">Transaction successfully saved!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Chart">Statistics</string>
</resources>