<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    <ImageView-->
    <!--        android:id="@+id/ivBackground"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:background="@drawable/welcome_screen_bg"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent" />-->

    <ImageView
        android:id="@+id/ivArrowBack"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="26dp"
        android:background="@drawable/circle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAvatar"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="26dp"
        android:shape="ring"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="40dp">

        <ImageView
            android:id="@+id/ivProfileAvatar"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/profile_avatar" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="355dp"
        android:layout_height="230dp"
        android:layout_marginTop="94dp"
        android:background="@drawable/rectangle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="130dp"
        android:layout_height="24dp"
        android:layout_marginTop="129dp"
        android:textSize="20sp"
        android:text="Main account"
        android:textColor="@color/main_account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tvCurrentBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="159dp"
        android:textSize="36sp"
        android:text="$5,700"
        android:textColor="@color/background_rectangle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <!--    <ImageView-->
    <!--        android:id="@+id/tabLayout"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="80dp"-->
    <!--        android:layout_marginTop="220dp"-->
    <!--        android:layout_marginStart="40dp"-->
    <!--        android:layout_marginEnd="40dp"-->
    <!--        android:background="@drawable/tab_layout"-->
    <!--        app:tabRippleColor="@null"-->
    <!--        app:tabTextColor="@color/surface"-->
    <!--        app:tabTextAppearance="@style/TabTextAppearance"-->
    <!--        app:tabIndicatorAnimationMode="elastic"-->
    <!--        app:tabSelectedTextColor="@color/tabSelected"-->
    <!--        app:tabBackground="@drawable/tab_background"-->
    <!--        app:tabIndicatorHeight="0dp"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"/>-->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="220dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/tab_layout"
        app:tabRippleColor="@null"
        app:tabTextColor="@color/surface"
        app:tabTextAppearance="@style/TabTextAppearance"
        app:tabIndicatorAnimationMode="elastic"
        app:tabSelectedTextColor="@color/tabSelected"
        app:tabBackground="@drawable/tab_background"
        app:tabIndicatorHeight="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_all" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_income" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_expense" />

    </com.google.android.material.tabs.TabLayout>

    <Button
        android:id="@+id/btnCreateTransaction"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circle_gradient_shape"
        android:foreground="@drawable/plus"
        android:foregroundGravity="center"
        app:layout_constraintTop_toTopOf="@+id/ivExpenseBlock"
        app:layout_constraintEnd_toEndOf="@+id/ivExpenseBlock" />

    <Button
        android:id="@+id/btnChart"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circle_gradient_shape"
        android:foreground="@drawable/dots"
        android:foregroundGravity="center"
        app:layout_constraintTop_toTopOf="@+id/ivExpenseBlock"
        app:layout_constraintEnd_toStartOf="@+id/circularProgressIndicator" />

    <ImageView
        android:id="@+id/ivExpenseBlock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/expense_block_trans"
        app:layout_constraintTop_toBottomOf="@+id/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:progress="70"
        app:indicatorSize="70dp"
        app:indicatorColor="@color/tabSelected"
        app:trackColor="@color/main_account"
        app:trackThickness="7dp"
        app:layout_constraintTop_toTopOf="@+id/ivExpenseBlock"
        app:layout_constraintRight_toLeftOf="@+id/btnCreateTransaction" />

    <TextView
        android:id="@+id/tvTotalIncomeExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:text="Р"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/circularProgressIndicator"
        app:layout_constraintBottom_toBottomOf="@+id/circularProgressIndicator"
        app:layout_constraintStart_toStartOf="@+id/circularProgressIndicator"
        app:layout_constraintEnd_toEndOf="@+id/circularProgressIndicator"/>

    <ImageView
        android:id="@+id/ivTransactionBlock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="75dp"
        android:translationY="20dp"
        android:background="@drawable/trans_block"
        app:layout_constraintTop_toTopOf="@+id/ivExpenseBlock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvRoot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toTopOf="@+id/ivTransactionBlock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewTransactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.0"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        layout="@layout/progress_bar_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>